# OpenPoseEasy

./: .gitignore  CMakeLists.txt  README.md  openpose.sln
openpose/: ReadMe.txt  caffeblob.cpp  caffeblob.h  caffewrapper.cpp  caffewrapper.h  handdetector.cpp  handdetector.h  handdetectorarm.cpp  handdetectorarm.h  handdetectorwrist.cpp  handdetectorwrist.h  handengine.cpp  handengine.h  openpose.cpp  openpose.vcxproj  openpose.vcxproj.filters  pose_deploy.prototxt  pose_deploy_linevec.prototxt  poseengine.cpp  poseengine.h  stdafx.cpp
